--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://enescakar2148.github.io",
+  "homepage": "https://enescakar2148.github.io/SocialMediaFrontEnd-Beta",
   "name": "task-1",
   "version": "0.1.0",
   "private": true,
