--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "firebase": "^8.7.1",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-circle-modal": "0.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
